--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
   <meta name="apple-mobile-web-app-title" content="Trainer App" />
   <title>{{ title or "Trainer App" }}</title>
   <link rel="manifest" href="{{ url_for('pwa_manifest') }}">
-  <link rel="icon" href="{{ url_for('static', filename='images/social/instagram.png') }}">
-  <link rel="apple-touch-icon" href="{{ url_for('static', filename='images/social/instagram.png') }}">
+  <link rel="icon" href="{{ url_for('static', filename='images/barbell.png') }}">
+  <link rel="apple-touch-icon" href="{{ url_for('static', filename='images/barbell.png') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="{{ page_class or '' }}">
