Rename PWA app to Damjan's Client App

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
   <meta name="theme-color" content="#0f1f33" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="Trainer App" />
-  <title>{{ title or "Trainer App" }}</title>
-  <link rel="manifest" href="{{ url_for('pwa_manifest') }}?v=2">
+  <meta name="apple-mobile-web-app-title" content="Damjan's Client App" />
+  <title>{{ title or "Damjan's Client App" }}</title>
+  <link rel="manifest" href="{{ url_for('pwa_manifest') }}?v=3">
   <link rel="icon" href="{{ url_for('static', filename='images/barbell.png') }}?v=2">
   <link rel="apple-touch-icon" href="{{ url_for('static', filename='images/barbell.png') }}?v=2">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
